# random-word

./: .gitignore  CMakeLists.txt  LICENCE  TODO  american_english.cpp  american_english.hpp  bench.cpp  build.sh  main.cpp  metropolitan_french.cpp  metropolitan_french.hpp  phonology.cpp  phonology.hpp
